Ok for build with java 25